--- a/wp-content/themes/wp-florin/style.css
+++ b/wp-content/themes/wp-florin/style.css
@@ -273,6 +273,8 @@ textarea {
 
 h1, h2, h3, h4, h5, h6 {
 	clear: both;
+	line-height: .5em;
+
 }
 
 p {
@@ -561,6 +563,10 @@ a:hover, a:active {
 .menu-toggle,
 .main-navigation.toggled ul {
 	display: block;
+	color: white;
+	background-color: black;
+	height: 30px;
+	width: 20px;
 }
 
 @media screen and (min-width: 37.5em) {
@@ -846,4 +852,95 @@ object {
 
 .gallery-caption {
 	display: block;
+}
+
+
+/*nav menu*/
+
+.nav-menu a {
+ color: black;
+ text-underline: none;
+ margin: 10px 0 20px 40px;
+}
+
+.nav-menu a:hover {
+	border-bottom: 2px solid orange;
+	color: orange;
+}
+
+.site-header img {
+	width: 100%;
+
+}
+
+/*homepage entry section*/
+
+.site-main {
+	width: 90%;
+	margin: auto;
+	text-align: center;
+}
+
+.type-post {
+	display: inline-block;
+	width: 30%;
+	vertical-align:top;
+	height: 460px;
+	/*padding: 10px 30px 30px 30px;
+	border: 2px solid black;*/
+	margin: 30px 10px;
+
+}
+
+.entry-content img {
+	height: 200px;
+	width: 100%;
+}
+
+.entry-content p {
+	font-size: 10px;
+}
+
+.entry-title a {
+	text-decoration: none;
+	color: black;
+	text-transform: capitalize;
+}
+
+.entry-title a:hover {
+	color: orange;
+}
+
+
+
+.buy-now-link  {
+	text-decoration: none;
+	color: black;
+	border: 2px solid orange;
+	padding: 10px 25px;
+	border-radius: 6px;
+	text-transform: capitalize;
+	font-size: 12px;
+	font-weight: 500;
+}
+
+/*.buy-now-link:hover {
+	background-color: orange;
+
+}*/
+
+.entry-content a {
+	color: black;
+	text-decoration: none;
+}
+
+.entry-content a:hover {
+	color: black;
+	background-color: orange;
+}
+
+
+/*single page styling*/
+.single .featured-image {
+	display: none;
 }
