--- a/wp-content/themes/wp-florin/style.css
+++ b/wp-content/themes/wp-florin/style.css
@@ -862,10 +862,11 @@ object {
 	position: fixed;
 	background-color: rgb(0,0,0);
 	width: 100%;
-	height: 60px;
+	height: 65px;
 	font-family: 'Roboto Condensed', sans-serif;
 
 	letter-spacing: .2em;
+	z-index: 99999;
 }
 
 
@@ -938,6 +939,8 @@ object {
 .site-main {
 	width: 90%;
 	margin: auto;
+	padding-top: 100px;
+	padding-bottom: 100px;
 }
 
 /*homepage entry section*/
@@ -1014,15 +1017,18 @@ h2.entry-title {
 }*/
 
 .entry-content a {
-	color: lightgray;
+	color: white;
 	text-decoration: none;
 }
 
 .entry-content a:hover {
-	color: white;
 	background-color: #FF4500;
+	border: 2px solid #FF4500;
 }
 
+.addtoany_content_bottom a:hover{
+	background-color: transparent;
+}
 
 /*single page styling*/
 .single .featured-image {
@@ -1034,8 +1040,8 @@ h2.entry-title {
 
 .site-footer {
 	color: #FF4500;
-	background-color: rgba(0,0,0,.7);
-	height: 50px;
+	background-color: rgba(0,0,0, .7);
+	height: 180px;
 }
 
 /*.widget-area {
@@ -1044,10 +1050,17 @@ h2.entry-title {
 	width: 250px;
 	display: inline-block;
 	}*/
-.sfsi_wDiv {
-	margin-left: 50px;
-}
 
+/*footer widget*/
+
+#footer-sidebar1 {
+	margin-top: 20px;
+	display: inline-block;
+	float: right;
+	width: 20%;
+	text-align: center;
+	margin-right: 20px;
+}
 /*search bar */
 
 
