--- a/wp-content/themes/wp-florin/style.css
+++ b/wp-content/themes/wp-florin/style.css
@@ -860,11 +860,11 @@ object {
 
 .nav-menu {
 	position: fixed;
-	background-color: rgb(0,0,0);
+	/*background-color: rgb(0,0,0);*/
+	background-color: #4EBBB2;
 	width: 100%;
 	height: 65px;
 	font-family: 'Roboto Condensed', sans-serif;
-
 	letter-spacing: .2em;
 	z-index: 99999;
 }
@@ -889,7 +889,8 @@ object {
 }*/
 
 .sub-menu {
-	background-color: rgba(0,0,0,0.7);
+	/*background-color: rgba(0,0,0,0.7);*/
+	background-color: rgba(78, 187, 178, .7);
 	color: lightgray;
 	margin: 0;
 }
@@ -926,8 +927,9 @@ object {
 
 
 .header-img {
-	height: 450px;
+	background-size: cover;
 	width: 100%;
+	padding-top: 30px;
 }
 
 /*sitewide styling */
@@ -943,6 +945,22 @@ object {
 	padding-bottom: 100px;
 }
 
+
+/*filter menu*/
+
+#secondary-menu a{
+	color: black !important;
+}
+
+
+
+.menu-filter-menu-container ul li{
+	list-style-type: none !important;
+	display: inline-block;
+	padding-top: 25px;
+
+}
+
 /*homepage entry section*/
 
 .type-post {
@@ -953,7 +971,7 @@ object {
 	/*padding: 10px 30px 30px 30px;
 	border: 2px solid black;*/
 	margin: 30px 10px;
-	background-color: rgba(0,0,0,0.7);
+	background-color: rgba(78, 187, 178, .7);
 	height: 450px;
 }
 
@@ -970,7 +988,7 @@ h2.entry-title {
 
 .entry-title a {
 	text-decoration: none;
-	color: lightgray;
+	color: white;
 	text-transform: capitalize;
 }
 
@@ -984,7 +1002,7 @@ h2.entry-title {
 
 .entry-content p {
 	font-size: 10px;
-	color: lightgray;
+	color: white;
 	height: 40px;
 	width: 90%;
 
