--- a/wp-content/themes/wp-florin/style.css
+++ b/wp-content/themes/wp-florin/style.css
@@ -805,63 +805,18 @@ object {
 	text-align: center;
 }*/
 
-/*--------------------------------------------------------------
-## Galleries
---------------------------------------------------------------*/
-/*.gallery {
-	margin-bottom: 1.5em;
-}
 
-.gallery-item {
-	display: inline-block;
-	text-align: center;
-	vertical-align: top;
-	width: 100%;
-}
-
-.gallery-columns-2 .gallery-item {
-	max-width: 50%;
-}
-
-.gallery-columns-3 .gallery-item {
-	max-width: 33.33%;
-}
-
-.gallery-columns-4 .gallery-item {
-	max-width: 25%;
-}
-
-.gallery-columns-5 .gallery-item {
-	max-width: 20%;
-}
-
-.gallery-columns-6 .gallery-item {
-	max-width: 16.66%;
-}
-
-.gallery-columns-7 .gallery-item {
-	max-width: 14.28%;
-}
-
-.gallery-columns-8 .gallery-item {
-	max-width: 12.5%;
-}
-
-.gallery-columns-9 .gallery-item {
-	max-width: 11.11%;
-}
-
-.gallery-caption {
-	display: block;
+/*.site-header::before {
+	content: '';
+	height: 100px;
 }*/
-
 
 /*nav menu*/
 
 .nav-menu {
-	position: fixed;
-	/*background-color: rgb(0,0,0);*/
-	background-color: #4EBBB2;
+	
+	background-color: rgba(0,0,0, .8);
+	/*background-color: #4EBBB2;*/
 	width: 100%;
 	height: 65px;
 	font-family: 'Roboto Condensed', sans-serif;
@@ -889,8 +844,8 @@ object {
 }*/
 
 .sub-menu {
-	/*background-color: rgba(0,0,0,0.7);*/
-	background-color: rgba(78, 187, 178, .8);
+	background-color: rgba(0,0,0,0.7);
+	/*background-color: rgba(78, 187, 178, .8);*/
 	color: lightgray;
 	margin: 0;
 }
@@ -938,7 +893,6 @@ input[type="submit"] {
 .header-img {
 	background-size: cover;
 	width: 100%;
-	padding-top: 30px;
 }
 
 /*sitewide styling */
@@ -957,10 +911,25 @@ input[type="submit"] {
 
 /*filter menu*/
 
-#secondary-menu a{
-	color: black !important;
+#secondary-menu {
+	border-bottom: 1px solid black;
+	padding-bottom: 20px;
+	border-radius: 5px;
 }
 
+#secondary-menu a {
+	color: black !important;
+	padding: 20px 30px;
+}
+
+#secondary-menu a:hover {
+	background-color: orange;
+	color: white;
+}
+
+#secondary-menu .menu-item a {
+	margin: 0;
+}
 
 
 .menu-filter-menu-container ul li{
@@ -978,28 +947,37 @@ input[type="submit"] {
 	width: 30%;
 	vertical-align:top;
 	margin: 30px 10px;
-	background-color: rgba(78, 187, 178, .3);
-	border-bottom: 2px solid rgba(78, 187, 178, .8);
-	height: 500px;
-	padding-bottom: 50px;
+	/*background-color: rgba(0,0,0,.8);*/
+	height: 370px;
 }
 
 .entry-header img {
-	height: 200px;
+	height: 180px;
 	width: 100%;
 }
 
 
 h2.entry-title {
-	margin: 10px 0 5px 15px;
+	margin: 5px 0 5px 15px;
 	font-family: 'Roboto Condensed', sans-serif;
+	position: relative;
 }
 
 .entry-title a {
 	text-decoration: none;
-	/*color: white;*/
-	color: rgb(78, 187, 178);
+	color: black;
 	text-transform: capitalize;
+	font-size: 16px;
+}
+
+h2.entry-title::after {
+	content: "";
+	width: 250px;
+	height: 1px;
+	background-color: black;
+	position: absolute;
+	left: 0px;
+	top: 25px;
 }
 
 .entry-title a:hover {
@@ -1012,15 +990,16 @@ h2.entry-title {
 
 .entry-content p {
 	font-size: 10px;
-	/*color: white;*/
+	color: black;
 	height: 40px;
-	width: 90%;
-
+	width: 70%;
 }
 
 .price {
+	color: black;
 	position: absolute;
-	bottom: 115px;
+	right: 30px;
+	bottom: 157px;
 	width: 20%;
 	display: inline-block;
 	padding-top: 5px;*/
@@ -1029,7 +1008,7 @@ h2.entry-title {
 
 .buy-now-link  {
 	position: absolute;
-	bottom: 65px;
+	bottom: 25px;
 	text-decoration: none;
 	color: white;
 	padding: 10px 50px;
@@ -1041,10 +1020,9 @@ h2.entry-title {
 	transition: background-color .3s ease-in-out;
 }
 
-/*.buy-now-link:hover {
-	background-color: orange;
 
-}*/
+
+
 
 .entry-content a {
 	color: white;
@@ -1056,10 +1034,15 @@ h2.entry-title {
 	/*border: 2px solid #E36B5C;*/
 }
 
+/*social share links*/
 
-.addtoany_content_bottom {
-	position: absolute;
-	bottom: 5px;
+.addtoany_share_save_container {
+    clear: both;
+    margin: 16px 0;
+    width: 30px;
+    position: absolute;
+    right: 10px;
+		bottom: 5px;
 }
 
 .addtoany_content_bottom a:hover{
@@ -1105,6 +1088,17 @@ h2.entry-title {
 	width: 20%;
 	text-align: center;
 	margin-right: 20px;
+}
+
+
+/*footer social icons {}*/
+
+div.norm_row sfsi_wDiv {
+	text-align: left;
+	position: fixed !important;
+	width: 20px;
+	left: 0px;
+	top: 120px;
 }
 /*search bar */
 
