--- a/wp-content/themes/wp-florin/style.css
+++ b/wp-content/themes/wp-florin/style.css
@@ -904,14 +904,26 @@ input[type="submit"] {
 	padding-bottom: 100px;
 }
 
+/*carousel*/
+
+div.sp-post-carousel-section-189 {
+	width: 80%;
+	margin: auto;
+	padding-top: 75px !important;
+
+}
+
+
+
 
 /*filter menu*/
 
 #secondary-menu {
-	border-bottom: 1px solid black;
-	padding-bottom: 20px;
-	border-radius: 5px;
 	margin-bottom: 80px;
+	border-bottom: 2px solid black;
+	padding-bottom: 20px;
+	border-top: 1px solid black;
+	margin-top: 30px;
 }
 
 #secondary-menu a {
@@ -959,6 +971,7 @@ input[type="submit"] {
 	height: 370px;
 }
 
+
 .home .content-area .entry-header img, .archive .content-area .entry-header img {
 	height: 200px;
 	width: 100%;
@@ -978,7 +991,7 @@ input[type="submit"] {
 	font-size: 16px;
 }
 
-.home h2.entry-title::after, .archive h2.entry-title::after {
+/*.home h2.entry-title::after, .archive h2.entry-title::after {
 	content: "";
 	width: 250px;
 	height: 1px;
@@ -986,7 +999,7 @@ input[type="submit"] {
 	position: absolute;
 	left: 0px;
 	top: 25px;
-}
+}*/
 
 .home .entry-title a:hover, .archive .entry-title a:hover {
 	color: rgb(227, 107, 92);
@@ -1002,7 +1015,16 @@ input[type="submit"] {
 	color: black;
 	height: 40px;
 	width: 80%;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	display: inline-block;
+
+
 }
+
+.home .entry-content p:after{
+content: "\02026";
+} 
 
 .home .price, .archive .price {
 	color: black;
@@ -1070,6 +1092,10 @@ input[type="submit"] {
 	margin: auto;
 	width: 50%;
 	padding-bottom: 50px;
+}
+
+.sfsi_subscribe_Popinner h5 {
+	line-height: 16px;
 }
 
 
@@ -1154,4 +1180,72 @@ div.norm_row sfsi_wDiv {
 	display: inline-block;
 }
 
+
+@media only screen and (max-width: 700px) {
+	
+	#primary-menu {
+		font-size: 10px;
+	}
+	.menu-item a {
+    margin: 20px 0 20px 20px;
+	} 
+
+.menu-item a.menu-image-title-after.menu-image-not-hovered img{
+	display: none;
+	}
+
+
+	.site-main {
+		width: 70%;
+	
+	}
+	
+	.home .header-img {
+		height: 400px;
+	}
+	
+	
+	.home .content-area .type-post, .archive .content-area .type-post {
+		width: 100%;
+		height: 420px;
+	}
+	
+	.home .content-area .entry-header img, .archive .content-area .entry-header img {
+		height: 250px;
+	}
+		
+	.search-form	.search-field {
+		max-width: 50vw;
+	}
+	
+	#subscriber_widget-2 {
+		width: 70%;
+	}
+	
+	#footer-sidebar1 {
+
+		margin-right: 140px;
+	}
+		
+	}
+
+@media screen and (max-width: 1000px) and (min-width: 710px) {
+	.menu-item a {
+		margin: 20px 0 20px 60px;
+		font-size: 12px;
+	}
+	
+	.menu-item a.menu-image-title-after.menu-image-not-hovered img{
+		display: none;
+	}
+		 
+	.site-main {
+		width: 80%;
+	}
+	
+	.home .content-area .type-post, .archive .content-area .type-post {
+		width: 40%;
+    margin-left: 7%;
+		}
+}
 
