--- a/wp-content/themes/wp-florin/style.css
+++ b/wp-content/themes/wp-florin/style.css
@@ -715,7 +715,7 @@ a:hover, a:active {
 }
 
 .hentry {
-	margin: 0 0 1.5em;
+	margin: 100px 0 1.5em;
 }
 
 .updated:not(.published) {
@@ -814,7 +814,7 @@ object {
 /*nav menu*/
 
 .nav-menu {
-	
+
 	background-color: rgba(0,0,0, 1);
 	/*background-color: #4EBBB2;*/
 	width: 100%;
@@ -906,7 +906,7 @@ input[type="submit"] {
 
 /*carousel*/
 
-div.sp-post-carousel-section-189 {
+div.sp-post-carousel-section-179 {
 	width: 80%;
 	margin: auto;
 	padding-top: 75px !important;
@@ -940,6 +940,9 @@ div.sp-post-carousel-section-189 {
 	margin: 0;
 }
 
+#filter-navigation ul {
+	margin: 0 !important;
+}
 
 .menu-filter-menu-container ul li{
 	list-style-type: none !important;
@@ -1024,7 +1027,7 @@ div.sp-post-carousel-section-189 {
 
 .home .entry-content p:after{
 content: "\02026";
-} 
+}
 
 .home .price, .archive .price {
 	color: black;
@@ -1037,7 +1040,7 @@ content: "\02026";
 }
 
 
-.home .buy-now-link, .archive .buy-now-link   {
+.home .buy-now-link, .archive .buy-now-link  {
 	position: absolute;
 	bottom: 25px;
 	text-decoration: none;
@@ -1060,10 +1063,7 @@ content: "\02026";
 	text-decoration: none;
 }
 
-.home .entry-content a:hover, .archive .entry-content a:hover {
-	background-color: rgb(250, 115, 100);
-	/*border: 2px solid #E36B5C;*/
-}
+
 
 /*social share links*/
 
@@ -1095,7 +1095,7 @@ content: "\02026";
 }
 
 .sfsi_subscribe_Popinner h5 {
-	line-height: 16px;
+	line-height: 20px;
 }
 
 
@@ -1122,7 +1122,7 @@ content: "\02026";
 	float: right;
 	width: 20%;
 	text-align: center;
-	margin-right: 20px;
+	margin-right: 60px;
 }
 
 
@@ -1159,9 +1159,16 @@ div.norm_row sfsi_wDiv {
 
 /*single post */
 
+.single-post .hentry {
+	position: relative;
+}
+
 
 .single-post .entry-title {
 	font-size: 30px;
+	position: absolute;
+	left: 60%;
+	top: 10%;
 }
 
 .single-post .entry-header {
@@ -1178,17 +1185,39 @@ div.norm_row sfsi_wDiv {
 
 .single-post .entry-content {
 	display: inline-block;
+	position: absolute;
+	left: 60%;
+	top: 15%;
+}
+
+.single-post .buy-now-link  {
+	text-decoration: none;
+	color: white;
+	padding: 10px 50px;
+	border-radius: 6px;
+	text-transform: capitalize;
+	font-size: 12px;
+	font-weight: 500;
+	background-color: rgb(227, 107, 92);
+	transition: background-color .3s ease-in-out;
+}
+
+.single-post .addtoany_share_save_container {
+    width: 150px;
+    position: relative;
+    left: 0px;
+		top: 60%;
 }
 
 
-@media only screen and (max-width: 700px) {
-	
+@media only screen and (max-width: 750px) {
+
 	#primary-menu {
 		font-size: 10px;
 	}
 	.menu-item a {
     margin: 20px 0 20px 20px;
-	} 
+	}
 
 .menu-item a.menu-image-title-after.menu-image-not-hovered img{
 	display: none;
@@ -1196,56 +1225,86 @@ div.norm_row sfsi_wDiv {
 
 
 	.site-main {
-		width: 70%;
-	
+		width: 85%;
+
 	}
-	
+
 	.home .header-img {
 		height: 400px;
 	}
-	
-	
+
+
 	.home .content-area .type-post, .archive .content-area .type-post {
 		width: 100%;
 		height: 420px;
 	}
-	
+
 	.home .content-area .entry-header img, .archive .content-area .entry-header img {
 		height: 250px;
 	}
-		
+
 	.search-form	.search-field {
 		max-width: 50vw;
 	}
-	
+
 	#subscriber_widget-2 {
 		width: 70%;
 	}
-	
+
 	#footer-sidebar1 {
-
-		margin-right: 140px;
-	}
-		
+		margin-right: 160px;
 	}
 
-@media screen and (max-width: 1000px) and (min-width: 710px) {
+	.single-post .entry-title {
+	top: 0%;
+	}
+
+.single-post .entry-content {
+	top: 5%;
+	}
+
+
+	.single-post .entry-header img {
+		height: 200px;
+    width: 50%;
+	}
+
+	.single-post .buy-now-link {
+		padding: 10px 25px;
+	}
+
+}
+
+@media screen and (max-width: 1000px) and (min-width: 760px) {
 	.menu-item a {
 		margin: 20px 0 20px 60px;
 		font-size: 12px;
 	}
-	
+
 	.menu-item a.menu-image-title-after.menu-image-not-hovered img{
 		display: none;
 	}
-		 
+
 	.site-main {
 		width: 80%;
 	}
-	
+
 	.home .content-area .type-post, .archive .content-area .type-post {
 		width: 40%;
     margin-left: 7%;
 		}
-}
 
+		.single-post .entry-title {
+    top: 0%;
+	}
+
+	.single-post .entry-content {
+    top: 5%;
+	}
+
+
+		.single-post .entry-header img {
+    height: 300px;
+		width: 70%;
+	}
+}
