--- a/wp-content/themes/wp-florin/style.css
+++ b/wp-content/themes/wp-florin/style.css
@@ -813,8 +813,8 @@ object {
 /*nav menu*/
 
 .nav-menu {
-
 	background-color: rgba(0,0,0, 1);
+	position: fixed;
 	/*background-color: #4EBBB2;*/
 	width: 100%;
 	height: 65px;
@@ -908,6 +908,8 @@ input[type="submit"] {
 .top-ad {
 	width: 80%;
 	margin: auto;
+	padding-top: 50px;
+
 }
 
 /*carousel*/
@@ -930,10 +932,10 @@ div.sp-post-carousel-section-179 {
 	padding-bottom: 20px;
 	border-top: 1px solid black;
 	margin-top: 30px;
+	background-color:black;
 }
 
 #secondary-menu a {
-	color: black !important;
 	padding: 20px 30px;
 }
 
@@ -947,7 +949,7 @@ div.sp-post-carousel-section-179 {
 }
 
 #filter-navigation ul {
-	margin: 0 !important;
+	margin: 50px 0 20px 0 !important;
 }
 
 .menu-filter-menu-container ul li{
@@ -1222,9 +1224,13 @@ div.norm_row sfsi_wDiv {
 	margin-top: 100px;
 }
 
+#related_posts ul {
+	margin: 0;
+}
+
 #related_posts h3 {
 	display: inline-block;
-	padding-left: 100px;
+	padding-left: 50px;
 }
 
 #related_posts ul{
@@ -1320,18 +1326,25 @@ div.norm_row sfsi_wDiv {
 		margin-right: 160px;
 	}
 
-	.single-post .entry-title {
-	top: 0%;
+	#footer-sidebar1 #sfsi-widget-2 {
+		margin-top: 15px;
 	}
 
-.single-post .entry-content {
-	top: 5%;
+	.single-post .entry-title {
+		display: block;
+		position: static;
+		float: none;
 	}
+
+	.single-post .entry-content {
+		display: block;
+		position: static;
+		}
 
 
 	.single-post .entry-header img {
-		height: 200px;
-    width: 50%;
+		height: 250px;
+    width: 100%;
 	}
 
 	.single-post .buy-now-link {
