--- a/wp-content/themes/wp-florin/style.css
+++ b/wp-content/themes/wp-florin/style.css
@@ -832,7 +832,6 @@ object {
 }
 
 .site-logo span{
-	border-bottom: 1px solid white;
 	animation: 3s ease-out 2s 1 slideInFromLeft;
 }
 
@@ -880,14 +879,18 @@ object {
 
 #menu-item-108 .sub-menu {
 	margin-left: 50px;
-	width: 130%;
+	width: 100%;
 }
 
-
-.main-navigation ul ul a {
-	margin-left: 15px;
+.sub-menu li a{
+	margin-left: 30px;
 	font-size: 12px;
 }
+
+/*.main-navigation ul ul a {
+	margin-left: 15px;
+	font-size: 12px;
+}*/
 
 .main-navigation ul ul {
 	top: 90%;
@@ -943,17 +946,39 @@ input[type="submit"] {
 
 /*carousel*/
 
-div.sp-post-carousel-section-189 {
-	width: 80%;
+div.sp-post-carousel-section {
+	width: 90%;
 	margin: auto;
 	padding-top: 75px !important;
 
 }
 
-div.sp-post-carousel-section-189 img {
-	height: 200px;
+.sp-post-carousel-area .sp-pc-post {
 }
 
+
+.sp-post-carousel-area .sp-pc-post-title a {
+	text-decoration: none;
+	padding-left: 10px;
+}
+
+.sp-post-carousel-area img {
+	height: 200px;
+	-moz-transition: all 0.3s;
+	-webkit-transition: all 0.3s;
+	transition: all 0.3s;
+
+}
+
+.sp-post-carousel-area img:hover {
+	-moz-transform: scale(1.05);
+-webkit-transform: scale(1.05);
+transform: scale(1.05);
+}
+
+.slick-dots {
+	line-height: 0;
+}
 
 
 
@@ -974,8 +999,8 @@ div.sp-post-carousel-section-189 img {
 }
 
 #secondary-menu a:hover {
-	background-color: white;
-	color: rgb(227, 107, 92);
+	/*background-color: white;*/
+	background-color: rgba(227, 107, 92,.7);
 	border: 2px solid rgb(227, 107, 92);
 }
 
@@ -1009,18 +1034,32 @@ div.sp-post-carousel-section-189 img {
 
 .home .content-area .type-post, .archive .content-area .type-post {
 	position: relative;
+	overflow: hidden;
 	display: inline-block;
 	width: 30%;
 	vertical-align:top;
 	margin: 30px 10px;
 	/*background-color: rgba(0,0,0,.8);*/
 	height: 370px;
+	border: 1px solid grey;
+	box-shadow: 7px 7px 5px grey;
+
 }
 
 
 .home .content-area .entry-header img, .archive .content-area .entry-header img {
 	height: 200px;
 	width: 100%;
+	-moz-transition: all 0.3s;
+	-webkit-transition: all 0.3s;
+	transition: all 0.3s;
+
+}
+
+.home .content-area .entry-header img:hover, .archive .content-area .entry-header img:hover {
+	-moz-transform: scale(1.05);
+-webkit-transform: scale(1.05);
+transform: scale(1.05);
 }
 
 
@@ -1097,7 +1136,9 @@ content: "\02026";
 	transition: background-color .3s ease-in-out;
 }
 
-
+.buy-now-link:hover {
+	background-color: rgba(227, 107, 92,0.7);
+}
 
 
 
@@ -1139,6 +1180,10 @@ content: "\02026";
 	margin: auto;
 	width: 50%;
 	padding-bottom: 50px;
+}
+
+.sfsi_subscribe_Popinner  {
+	box-shadow: 7px 7px 5px grey;
 }
 
 .sfsi_subscribe_Popinner h5 {
