--- a/wp-content/themes/wp-florin/style.css
+++ b/wp-content/themes/wp-florin/style.css
@@ -1078,6 +1078,12 @@ div.sp-post-carousel-section {
 	font-size: 26px;
 }
 
+.home .content-area .site-main{
+	display:inline-block;
+	width: 70%;
+	margin-left: 40px;
+}
+
 
 .home .content-area .type-post, .archive .content-area .type-post {
 	position: relative;
@@ -1104,9 +1110,9 @@ div.sp-post-carousel-section {
 }
 
 .home .content-area .entry-header img:hover, .archive .content-area .entry-header img:hover {
-	-moz-transform: scale(1.05);
--webkit-transform: scale(1.05);
-transform: scale(1.05);
+	-moz-transform: scale(1.03);
+-webkit-transform: scale(1.03);
+transform: scale(1.03);
 }
 
 
@@ -1147,7 +1153,7 @@ transform: scale(1.05);
 	color: black;
 	height: 60px;
 	width: 80%;
-	overflow: hidden;
+
 	text-overflow: ellipsis;
 	display: inline-block;
 
@@ -1162,21 +1168,21 @@ content: "\02026";
 	color: white;
 	padding: 10px 10px;
 	background-color: rgb(227, 107, 92);
-	font-size: 1.3em;
+	font-size: 1.2em;
 	position: absolute;
 	right: 0;
-	top: 10px;
+	top: 35px;
 	/*right: 50px;
 	top: 136px;*/
-	width: 20%;
+	width: 23%;
 	display: inline-block;
-	padding-top: 5px;*/
+	padding-top: 5px;
 }
 
 
 .home .buy-now-link, .archive .buy-now-link  {
 	position: absolute;
-	bottom: 25px;
+	bottom: 15px;
 	text-decoration: none;
 	color: white;
 	padding: 10px 50px;
@@ -1213,7 +1219,7 @@ content: "\02026";
 
 .addtoany_share_save_container {
     clear: both;
-    margin: 16px 0;
+    margin: 0 !important;
     width: 30px;
     position: absolute;
     right: 10px;
@@ -1331,8 +1337,8 @@ div.norm_row sfsi_wDiv {
 
 /*single post */
 
-/*single post-siteads*/
-.ad-section-desktop {
+/*single post-site ads*/
+.side-ad-section-desktop {
 	display: inline-block;
 	position:absolute;
 	right: 0;
@@ -1363,18 +1369,19 @@ div.norm_row sfsi_wDiv {
 	width: 420px;
 }
 
+.single-post h1 {
+	font-size: 30px;
+
+}
 
 .single-post .entry-content {
 	display: inline-block;
 	position: absolute;
-  top: 40px;
+  top: 100px;
   left: 50%;
 }
 
-.single-post h1 {
-	font-size: 30px;
-	display: inline;
-}
+
 
 .single-post .product-content {
 	margin-top: 20px;
@@ -1391,6 +1398,11 @@ div.norm_row sfsi_wDiv {
 	font-weight: 500;
 	background-color: rgb(227, 107, 92);
 	transition: background-color .3s ease-in-out;
+}
+
+.single-post .buy-now-link:hover {
+	background-color: rgba(227, 107, 92,0.7);
+
 }
 
 .single-post .addtoany_share_save_container {
@@ -1454,6 +1466,17 @@ div.norm_row sfsi_wDiv {
 #related_posts img {
 	width: 300px;
 	height: 250px;
+	margin-right: 20px;
+	-moz-transition: all 0.3s;
+	-webkit-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+
+#related_posts img:hover {
+-moz-transform: scale(1.03);
+-webkit-transform: scale(1.03);
+transform: scale(1.03);
 }
 
 
@@ -1592,7 +1615,7 @@ div.norm_row sfsi_wDiv {
 		margin-right: 160px;
 	}
 
-	.ad-section-desktop {
+	.side-ad-section-desktop {
 		display: none;
 	}
 
@@ -1658,7 +1681,7 @@ div.norm_row sfsi_wDiv {
 		}
 
 
-		.ad-section-desktop {
+		.side-ad-section-desktop {
 			display: none;
 		}
 
